# polimind

./: .gitignore  README.md  pyproject.toml
docs/prompting/: CAIGS-Conversational Agent Instruction Generation System.md  PCGI-Protocolo Conversacional de Generacion de Instrucciones.md
src/polimind/: __init__.py
src/polimind/api/: __init__.py
src/polimind/api/openai/: __init__.py  content.py  core.py  history.py  metrics.py
