[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polimind"
version = "0.1.0"
description = "An extensible Python toolkit for AI capabilities, starting with a structured OpenAI interface."
authors = [
    {name = "artitzco", email = "artitzco@proton.me"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.0.0",
    "pillow>=9.0.0",
]
license = {text = "MIT"}
keywords = ["ai", "openai", "api", "chat", "multimodal", "history", "metrics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/artitzco/polimind"

[tool.setuptools.packages.find]
where = ["src"]
